сделала через медиа чтоб убрать десктоп

--- a/css/style.css
+++ b/css/style.css
@@ -459,10 +459,18 @@ section {
     }
 }
 
-.case-card:hover .case-arrow, .case-card.slick-current .case-arrow {
+.case-card:hover .case-arrow {
     opacity: 1;
     transform: translateX(0);
     animation: arrowBounce 1s infinite alternate;
+}
+
+@media (max-width: 992px) {
+    .case-card.slick-current .case-arrow {
+        opacity: 1;
+        transform: translateX(0);
+        animation: arrowBounce 1s infinite alternate;
+    }
 }
 
 @keyframes arrowBounce {
